--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,9 @@ dependencies {
 	implementation 'org.hibernate.validator:hibernate-validator:6.0.13.Final'
 	implementation 'org.springdoc:springdoc-openapi-ui:1.5.12'
 	implementation 'org.springdoc:springdoc-openapi-data-rest:1.5.12'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.security:spring-security-test'
+	implementation 'com.auth0:java-jwt:3.18.1'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'mysql:mysql-connector-java'
 	annotationProcessor 'org.projectlombok:lombok'
